Add login/logout; Login CSRF; Secure session

--- a/web/template/login.gohtml
+++ b/web/template/login.gohtml
@@ -22,6 +22,7 @@
     <p>
         <input type="submit" value="Login"/>
     </p>
+    <input type="hidden" name="csrf" value="{{index . "csrfToken"}}"/>
 </form>
 </body>
 
